# configs

./: .#.bashrc_bina  .Xdefaults  .Xresources  .bash_colors  .bash_colors.sh  .bash_history  .bash_profile  .bashrc  .bashrc_arch  .bashrc_bina  .bashrc_el-captain  .bashrc_emacs  .bashrc_gauss  .bashrc_git  .bashrc_go  .bashrc_hesse  .bashrc_java  .bashrc_jira  .bashrc_kafka  .bashrc_mac  .bashrc_mu  .bashrc_nginx  .bashrc_npm  .bashrc_python  .bashrc_ruby  .bashrc_spark  .bashrc_ssh  .bashrc_task  .bashrc_tmux  .bashrc_vim  .codex  .ghci  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .npmrc  .offlineimaprc  .taskrc  .tmux.conf  (+24 more)
.atom/: config.cson
.config/: redshift.conf
.emacs.d/: prelude-modules.el
.nixpkgs/: common.nix  config.nix  default.nix  vimrc.nix
.tmuxinator/: it.yml
.vim.local/: bundles.vim
.xchat2/: README  colors.conf
.xmonad/: xmobarrc  xmobarrc.backup  xmobarrc.hs  xmonad.hs
archive/: run_sus  setup.sh  ubuntu-ghc-alternative
archive/desktop/xmonad/: my-xmonad.cabal  stack.yaml  xmobar.hs
bash/: bash_profile  bashrc  bashrc_el-captain  bashrc_git  bashrc_hesse  bashrc_npm  bashrc_task  bashrc_tmux  bashrc_vim  functions  gpg  spark.sus
config/: redshift.conf  spark.sus
cronjobs/: .bina_option_val  coursera-dl
desktop/: spark.sus
freebsd/: bashrc
home/: Xdefaults  Xresources  aspell.en.pws  ghci  gitconfig  gitignore_global  npmrc  pylintrc  spark.sus  taskrc  vimrc.local  (+1 more)
home-manager/: config.nix  home.nix  hosts.nix  mail.nix  my-aspell-repl  packages.nix  signal-desktop-beta.nix  signal-desktop.nix  slack.nix
(+1321 files in other folders)
