name: my-xmonad
version: 0.0.0.0
author: Sam Stites <sam@stites.io>
license: BSD3
build-type: Simple
cabal-version: >= 1.10

executable my-xmonad
  include-dirs:
      /usr/include/X11/
    , /usr/include/X11/extensions/
  main-is: xmonad.hs
  build-depends:
      base >= 4.7 && < 5
    , xmonad >= 0.13
    , xmonad-contrib >= 0.13
